# real-estate-agentic-ai

./: .env.tmpl  .envrc  README.md  Tiltfile
agents-old/bkp/orchestrator/: .env.tmpl
agents-old/bkp/search_listings/: Containerfile
agents/orchestrator/: README.md  pyproject.toml
agents/orchestrator/src/client/: test_client.py
agents/orchestrator/src/orchestrator/: agent.py  config.py  dag_executor.py  executor.py  main.py  planner.py
agents/search_listings/: README.md  pyproject.toml
agents/search_listings/src/client/: test_client.py
agents/search_listings/src/search_listings/: agent.py  executor.py  main.py
archive/bkp/orchestrator/: Containerfile  README.md
backend/: README.md
backend/agents/legal/: Dockerfile  Dockerfile.lambda  README.md  pyproject.toml
backend/agents/legal/src/: __init__.py  lambda_handler.py  local_api.py
backend/agents/planner/: Dockerfile  Dockerfile.lambda  README.md  pyproject.toml  test_lambda.py  test_planner.py
backend/agents/planner/src/: lambda_handler.py  local_api.py  main.py  planner.py
backend/agents/planner/src/clients/: __init__.py  http_client.py  lambda_client.py
backend/agents/planner/src/services/: __init__.py  planner_service.py
backend/agents/planner/src/tools/: __init__.py  planner_context.py  planner_tools.py
backend/api/: .gitignore  Dockerfile  Dockerfile.lambda  README.md  pyproject.toml
backend/api/src/: __init.py__  lambda_handler.py  main.py  utils.py
backend/api/src/clients/: __init__.py  planner_client.py
backend/api/src/services/: __init__.py  api_service.py  sqs_service.py
backend/shared/: README.md  __init__.py  pyproject.toml
backend/shared/database/: README.md  __init__.py  connection.py  example_usage.py  models.py  pyproject.toml  repository.py
backend/shared/database/migrations/: 001_init.sql
infra-as-code/app-infra/: tf-wrapper.sh
infra-as-code/app-infra/tf-real-estate-agents/: api-gateway.tf  commons.tf  iam-policy.tf  main.tf  outputs.tf  providers.tf  sqs.tf  variable-commons.tf  variables.tf  vpc_endpoints.tf
infra-as-code/k8s/tilt/: Kustomization  deployment_api.yaml  deployment_legal.yaml  deployment_planner.yaml  deployment_postgres.yaml  service_api.yaml  service_legal.yaml  service_planner.yaml  service_postgres.yaml
scripts/aws_aurora_data_migration/: README.md  requirements.txt  run_migration.py
(+17 files in other folders)
