[project]
name = "planner-agent"
version = "0.1.0"
description = "Planner agent for real estate agentic AI"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "hypercorn>=0.17.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.35.0",
    "openai-agents[litellm]>=0.6.0",
    "real-estate-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
real-estate-shared = { path = "../../shared", editable = true }
