[project]
name = "database"
version = "0.1.0"
description = "Shared database module for real estate agents"
readme = "database/README.md"
requires-python = ">=3.12"

dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The package 'database' is found in the parent directory
packages = ["database"]
root = ".."